changing the picture url

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <li class=" w23-5 w48-2-lg w100-sm">
         <div class="card flex flex-column justify-between">
           <div class="from-group">
-            <img src="/asset/home-section5-1.png" alt="person picture">
+            <img src="./asset/home-section5-1.png" alt="person picture">
             <div class="p-16 ">
               <p class="pb-8">Jessy</p>
               <p>眼鏡品質優良，下次還會想來這邊購買！</p>
@@ -120,7 +120,7 @@
       <li class=" w23-5 w48-2-lg w100-sm">
         <div class="card  flex flex-column justify-between">
           <div class="from-group">
-            <img src="/asset/home-section5-2.png" alt="person picture">
+            <img src="./asset/home-section5-2.png" alt="person picture">
             <div class="p-16">
               <p class="pb-8">凱倫</p>
               <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
@@ -135,7 +135,7 @@
       <li class=" w23-5 w48-2-lg w100-sm">
         <div class="card  flex flex-column justify-between">
           <div class="from">
-            <img src="/asset/home-section5-3.png" alt="person picture">
+            <img src="./asset/home-section5-3.png" alt="person picture">
             <div class="p-16">
               <p class="pb-8">悠悠</p>
               <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
@@ -150,7 +150,7 @@
       <li class=" w23-5 w48-2-lg w100-sm">
         <div class="card  flex flex-column justify-between">
           <div class="from-group">
-            <img src="/asset/home-section5-4.png" alt="person picture">
+            <img src="./asset/home-section5-4.png" alt="person picture">
             <div class="p-16">
               <p class="pb-8">Kyuan</p>
               <p>服務很好，品質沒有任何問題，非常喜歡。</p>
@@ -207,11 +207,11 @@
         </div>
 
         <ul class="flex gap32 gap16-lg gap-8-sm">
-          <li class="squar-48 squar-40-lg squar-24-sm sns"><a href="#"><img src="/asset/ic-social-fb.png"
+          <li class="squar-48 squar-40-lg squar-24-sm sns"><a href="#"><img src="./asset/ic-social-fb.png"
                 alt="facebook icon"></a></li>
-          <li class="squar-48 squar-40-lg squar-24-sm sns"><a href="#"><img src="/asset/ic_social_line.png"
+          <li class="squar-48 squar-40-lg squar-24-sm sns"><a href="#"><img src="./asset/ic_social_line.png"
                 alt="line icon"></a></li>
-          <li class="squar-48 squar-40-lg squar-24-sm sns"><a href="#"><img src="/asset/ic_social_ig.png"
+          <li class="squar-48 squar-40-lg squar-24-sm sns"><a href="#"><img src="./asset/ic_social_ig.png"
                 alt="instagram icon"></a></li>
         </ul>
       </div>
