--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </div>
   <div class="bg-picture">
     <div class="container m0auto text-center py-80 py-40-sm">
-      <h2 class="text-white pb-48 text-24-sm">聯名設計鏡框</h2>
+      <h2 class="text-white text-bold pb-48 text-24-sm">聯名設計鏡框</h2>
       <ul class="flex">
         <li class="w50 w100-lg mb-24-lg">
           <img src="./asset/home-section4-1.png" alt="person picture">
@@ -101,7 +101,7 @@
     </div>
   </div>
   <div class="container m0auto py-80 py-40-sm">
-    <h2 class="text-primary pb-48 text-center">顧客推薦</h2>
+    <h2 class="text-secondary text-bold pb-48 text-center">顧客推薦</h2>
     <ul class="flex gap24">
       <li class=" w23-5 w48-2-lg w100-sm">
         <div class="card flex flex-column justify-between">
@@ -165,7 +165,7 @@
   </div>
   <div class="bg-third">
     <div class="container468 container m0auto py-80 py-40-sm">
-      <h2 class="text-primary text-center text-bold pb-48">聯絡我們</h2>
+      <h2 class="text-secondary text-center text-bold pb-48">聯絡我們</h2>
       <p class="pb-24">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
       <label for="name" class="block pb-8">姓名</label><input id="name" type="text" placeholder="陳小明"
         class="border mb-16 w100 py-6">
